force-app/main/default/objects/Resource_Feedback__c/Resource_Feedback__c.object-meta.xml
<CustomObject>
    <label>Resource Feedback</label>
    <nameField>
        <displayFormat>Feedback ID - {0000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>