force-app/main/default/objects/Resource_Feedback__c/fields/Parenting_Resource__c.field-meta.xml
<CustomField>
    <fullName>Parenting_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parenting Resource</label>
    <referenceTo>Parenting_Resource__c</referenceTo>
    <relationshipLabel>Resource Feedbacks</relationshipLabel>
    <relationshipName>Resource_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>