force-app/main/default/objects/Resource_Feedback__c/listViews/Content_Review_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Content_Review_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Content Review Queue</label>
    <queue>Content_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>