force-app/main/default/objects/Resource_Feedback__c/listViews/Event_Feedback_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Event_Feedback_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Event Feedback Queue</label>
    <queue>Event_Feedback_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>