force-app/main/default/objects/Resource_Feedback__c/listViews/Feedback_Review_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Feedback_Review_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Feedback_Review_Queue</label>
    <queue>Feedback_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>