force-app/main/default/objects/Resource_Feedback__c/listViews/Mentorship_Program_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Mentorship_Program_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Mentorship Program Queue</label>
    <queue>Mentorship_Program_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>