force-app/main/default/objects/Resource_Feedback__c/listViews/Moderation_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Moderation_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Moderation Queue</label>
    <queue>Moderation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>