force-app/main/default/objects/Resource_Feedback__c/listViews/Report_Abuse_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Report_Abuse_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Report Abuse Queue</label>
    <queue>Report_Abuse_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>