force-app/main/default/objects/Resource_Feedback__c/listViews/User_Support_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>User_Support_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>User Support Queue</label>
    <queue>User_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>