force-app/main/default/objects/Resource_Feedback__c/listViews/Volunteer_Opportunity_Queue_Resource_Feedback.listView-meta.xml
<ListView>
    <fullName>Volunteer_Opportunity_Queue_Resource_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Volunteer Opportunity Queue</label>
    <queue>Volunteer_Opportunity_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>